<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="3"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- output -->
	<TextView 
	    android:id="@+id/tvPreview"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
	    />
	
    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="end"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <!-- layer 1 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed7"
                android:text="@string/lbl7"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed8"
                android:text="@string/lbl8"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed9"
                android:text="@string/lbl9"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#3D4245"
                android:onClick="add"
                android:text="@string/lblPlus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <!-- layer 2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed4"
                android:text="@string/lbl4"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed5"
                android:text="@string/lbl5"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed6"
                android:text="@string/lbl6"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#3D4245"
                android:onClick="sub"
                android:text="@string/lblMinus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <!-- layer 3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed1"
                android:text="@string/lbl1"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed2"
                android:text="@string/lbl2"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed3"
                android:text="@string/lbl3"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnTimes"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#3D4245"
                android:onClick="multiply"
                android:text="@string/lblTimes"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <!-- layer 4 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="clear"
                android:text="@string/lblClear"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressed0"
                android:text="@string/lbl0"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#0A0A0A"
                android:onClick="pressedPoint"
                android:text="@string/lblPoint"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#3D4245"
                android:onClick="divide"
                android:text="@string/lblDivide"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#76B900"
            android:onClick="calculate"
            android:text="@string/lblEquals"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>